Mass update to accomodate uBO and AGH users

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -33,6 +33,8 @@ body:
         - AdGuard for Mac
         - AdGuard for Safari
         - AdGuard for Windows
+        - AdGuard Home
+        - uBlock Origin (Firefox/MV2)
         - Other ad blocker
     validations:
       required: true
@@ -74,9 +76,10 @@ body:
         - Safari
         - Microsoft Edge
         - Opera
+        - Vivaldi
         - Yandex Browser
-        - other(specify in comment below)
-        - the problem is with app, not a site
+        - Other (Specify in comment below)
+        - The problem is with an app, not a site
     validations:
       required: true
 
@@ -88,6 +91,7 @@ body:
       options:
         - Desktop
         - Mobile
+        - Other (e.g. TV, game console)
     validations:
       required: true
 
@@ -121,9 +125,12 @@ body:
         - AdGuard URL Tracking filter
         - AdGuard Social Media filter
         - AdGuard Annoyances filter
+        - AdGuard Popups filter
+        - AdGuard Mobile App Banners filter
         - AdGuard DNS filter
         - AdGuard Experimental filter
         - Filter unblocking search ads and self-promotion
+        - AdGuard Browsing Security module
         - ---Third-party filters---
         - EasyList
         - ABPindo
@@ -190,6 +197,17 @@ body:
         - Dandelion Sprout's Nordic Filters
         - Dandelion Sprout's Annoyances List
         - Legitimate URL Shortener
+        - ---Frequently used other lists---
+        - uBlock Filters
+        - uBlock Filters – Badware Risks
+        - uBlock Filters – Privacy
+        - uBlock Filters – Quick fixes
+        - uBlock Filters – Resource abuse
+        - uBlock Filters – Unbreak
+        - Block Outsider Intrusion into LAN
+        - Dan Pollock's List
+        - Fanboy's Notifications Blocking List
+        
     validations:
       required: true
 
