update github issue templates

--- a/.github/ISSUE_TEMPLATE/bug_report_NSFW.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report_NSFW.yml
@@ -73,7 +73,7 @@ body:
         - Microsoft Edge
         - Opera
         - Yandex Browser
-        - other(specify in comment below)
+        - other (specify in comment below)
         - the problem is with app, not a site
     validations:
       required: true
@@ -119,6 +119,11 @@ body:
         - AdGuard URL Tracking filter
         - AdGuard Social Media filter
         - AdGuard Annoyances filter
+        - AdGuard Cookie Notices filter
+        - AdGuard Popups filter
+        - AdGuard Mobile App Banners filter
+        - AdGuard Widgets filter
+        - AdGuard Other Annoyances filter
         - AdGuard DNS filter
         - AdGuard Experimental filter
         - Filter unblocking search ads and self-promotion
@@ -150,24 +155,18 @@ body:
         - Xfiles
         - Adblock Warning Removal List
         - Online Malicious URL Blocklist
-        - Spam404
         - RU AdList - Counters
         - ABPVN List
         - Fanboy's Enhanced Tracking List
         - Official Polish filters for AdBlock, uBlock Origin & AdGuard
         - Polish GDPR-Cookies Filters
         - Estonian List
-        - ChinaList+EasyList
         - CJX's Annoyances List
         - Polish Social Filters
-        - Adblock-Persian list
-        - Fanboy's Swedish
         - Fanboy's Anti-Facebook List
-        - Fanboy's Vietnamese
         - List-KR
         - xinggsf
         - I don't care about cookies
-        - Fanboy's Spanish\/Portuguese
         - EasyList Spanish
         - KAD - Anti-Scam
         - Adblock List for Finland
@@ -177,7 +176,6 @@ body:
         - Polish Annoyances Filters
         - Polish Anti Adblock Filters
         - Fanboy's Anti-thirdparty Fonts
-        - BarbBlock
         - EasyList Cookie List
         - NoCoin Filter List
         - Frellwit's Swedish Filter
@@ -188,6 +186,8 @@ body:
         - Dandelion Sprout's Nordic Filters
         - Dandelion Sprout's Annoyances List
         - Legitimate URL Shortener
+        - Dandelion Sprout's Serbo-Croatian List
+        - IndianList
     validations:
       required: true
 
@@ -220,9 +220,9 @@ body:
       description: |
         0. DO NOT upload screenshots with sexually explicit material on GitHub directly. Instead, upload it to third-party image hosting and post URL here;
         1. Add screenshots of the problem. You can drag and drop images or paste them from clipboard;
-           Use `<details> </details>` tag to hide screenshots under the spoiler; 
+          Use `<details> </details>` tag to hide screenshots under the spoiler;
         2. Describe the issue extensively unless it is absolutely clear from the screenshot what the problem is;
-        You can also indicate any other information that you think the developers should know.
+          You can also indicate any other information that you think the developers should know.
 
         Warning: Please remove personal information before uploading screenshots!
       value: |
@@ -251,4 +251,3 @@ body:
       options:
         - label: I agree to follow this condition
           required: true
-
